# summarizer

./: .gitignore  LICENSE  README.MD  pyproject.toml  requirements.txt  summarize.py  tray_gemini.py
.github/workflows/: release-macos.yml
app/: ia.py  settings.py
app/ui/: settings_window.py
docs/: build_macos.md
